--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,16 @@
     {% endif %}
 </head>
 <body>
-<header>
-    {% if user.is_authenticated %}
-        <div><p>Current time: <span id="current-time"></span></p></div>
-        <div id="user-information"><i class="fas fa-user"></i> Welcome, {{ user.username }}!</div>
-    {% endif %}
-</header>
+    <header>
+        {% if user.is_authenticated %}
+            <input type="checkbox" id="toggle-sidebar" class="toggle-sidebar">
+            <label for="toggle-sidebar" class="toggle-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" class="icon-xl-heavy"><path fill="currentColor" fill-rule="evenodd" d="M8.857 3h6.286c1.084 0 1.958 0 2.666.058.729.06 1.369.185 1.961.487a5 5 0 0 1 2.185 2.185c.302.592.428 1.233.487 1.961.058.708.058 1.582.058 2.666v3.286c0 1.084 0 1.958-.058 2.666-.06.729-.185 1.369-.487 1.961a5 5 0 0 1-2.185 2.185c-.592.302-1.232.428-1.961.487C17.1 21 16.227 21 15.143 21H8.857c-1.084 0-1.958 0-2.666-.058-.728-.06-1.369-.185-1.96-.487a5 5 0 0 1-2.186-2.185c-.302-.592-.428-1.232-.487-1.961C1.5 15.6 1.5 14.727 1.5 13.643v-3.286c0-1.084 0-1.958.058-2.666.06-.728.185-1.369.487-1.96A5 5 0 0 1 4.23 3.544c.592-.302 1.233-.428 1.961-.487C6.9 3 7.773 3 8.857 3M6.354 5.051c-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216-.05.617-.051 1.41-.051 2.546v3.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051h.6V5h-.6c-1.137 0-1.929 0-2.546.051M11.5 5v14h3.6c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546v-3.2c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C17.029 5.001 16.236 5 15.1 5zM5 8.5a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H6a1 1 0 0 1-1-1M5 12a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H6a1 1 0 0 1-1-1" clip-rule="evenodd"></path></svg>
+            </label>
+            <div><p class="current-time">Current time: <span id="current-time"></span></p></div>
+            <div id="user-information"><i class="fas fa-user"></i> Welcome, {{ user.username }}!</div>
+        {% endif %}
+    </header>
 
 {% if user.is_authenticated %}
     <div class="container">
@@ -25,10 +29,11 @@
             <div class="sidebar">
                 <h3>Recycling Monitoring System</h3>
                 <ul>
-                    <li><i class="fas fa-home"></i> <a href="#">Home</a></li>
-                    <li><i class="fas fa-chart-bar"></i> <a href="#">Statistics</a></li>
-                    <li><i class="fas fa-file-alt"></i> <a href="#">Report</a></li>
+                    <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="#"><i class="fas fa-chart-bar"></i> Statistics</a></li>
+                    <li><a href="#"><i class="fas fa-file-alt"></i> Report</a></li>
                 </ul>
+                
                 <form action="{% url 'logout' %}" method="post">
                     {% csrf_token %}
                     <button id="logout-button"><i class="fas fa-sign-out-alt"></i> Logout</button>
@@ -49,12 +54,13 @@
                 </div>
                 <div id="right-side">
                     <div class="firstChart">
-                    <canvas id="chart"></canvas>
+                        <canvas id="general-chart"></canvas>
                     </div>
                     <div class="secondChart">
-                    <canvas id="chart2"></canvas>
+                        <canvas id="detailed-chart"></canvas>
                     </div>
                 </div>
+                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                 <script src="{% static 'kharazmi/scripts/admin.js' %}"></script>
             </div>
