--- a/templates/index.html
+++ b/templates/index.html
@@ -41,15 +41,18 @@
             </div>
             <div class="content">
                 <div id="left-side">
-                    <p id="title-div">Real Time Image Classification</p>
+                    <p id="title-div">Real Time Waste Detection</p>
                     <div id="image-div">
                         <img id="image-frame" src="" alt="live stream">
                     </div>
-                    <div id="predicted-div">
-                        <p id="predicted-class-text">None</p>
+                    <div class="pieChart">
+                        <canvas id="pie-chart"></canvas>
                     </div>
                     <div id="predicted-div">
-                        <p id="predicted-subclass-text">None</p>
+                        <p id="predicted-class-text" style="font-size: 20px">None</p>
+                    </div>
+                    <div id="predicted-div">
+                        <p id="predicted-subclass-text" style="font-size: 20px">None</p>
                     </div>
                 </div>
                 <div id="right-side">
